# nearest-smaller-suffixes-mwe

./: CMakeLists.txt  README.md  main_plain.cpp  main_sdsl.cpp
